--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -241,7 +241,7 @@ li:hover ul#dropdown {
 .hats-grid {
     background-color: aliceblue;
     padding: 20px;
-    height: 200px;
+    height: auto;
     text-align: center;
 }
 
