Adding all images to folder

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -229,6 +229,16 @@ li:hover ul#dropdown {
     height: auto;
 }
 
+.center-img {
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+    width: 75%;
+    height: 50%;
+}
+
 .olin-logo {
     width: 180px;
     height: 30px;
