--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -12,7 +12,7 @@ body {
 }
 
 h1, h2, h3, .caption, .small-caption {
-    padding: 10px 10px 2px 70px;
+    padding: 10px 90px;
     font-weight: normal;
 }
 
@@ -254,7 +254,7 @@ li:hover ul#dropdown {
 }
 
 .hats-grid {
-    background-color: aliceblue;
+    background-color:  rgba(181, 173, 175, 0.875);
     padding: 20px;
     height: auto;
     text-align: center;
